--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,8 +8,8 @@
     <color name="color_primary">#9e9e9e</color>
     <color name="color_primary_dark">#ff1d5060</color>
 
-    <color name="divider_background_light">#33b5e5</color>
-    <color name="divider_background_dark">#33b5e5</color>
+    <color name="divider_background_light">#f21313</color>
+    <color name="divider_background_dark">#f21313</color>
 
     <color name="background_floating_material_dark">#191919</color>
     <color name="background_material_dark">#000000</color>
